--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
  
   <link rel="stylesheet" href="css/style.css?v=10">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9724513291347385"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
