--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
       </div>
     </div>
   </div>
+    <footer class="footer">
+    <div class="copyright"><form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_NcpPoZy0xv1FNw" async> </script> </form></div>
+  </footer>
   <footer class="footer">
     <div class="copyright">&copy; 2024 ScienceBaba Tools - Online Developer Tools</div>
   </footer>
