--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="content-language" content="en">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScienceBaba Tools - Online Developer Tools</title>
+  <title>Best Developer Tools | Free Coding Tools</title>
   <meta name="keywords"
     content="online,md5,sha1,sha256,sha,sha512,sha3,keccak,shake,base64,base32,syntax highlight,crc-32,crc-16,md2,md4,htmlencode,htmldecode,urlencode,urldecode">
   <meta name="author" content="emn178">
@@ -201,7 +201,7 @@
                 </li>
                 <li><a href="html_encode.html">Encode</a></li>
                 <li><a href="html_decode.html">Decode</a></li>
-                <li><a href="https://www.famral.com/tools/html-link-generator">Link Generator</a></li>
+                <li><a href="https://tools.famral.com/html-link-generator">Link Generator</a></li>
               </ul>
               <ul class="menu">
                 <li>
@@ -227,7 +227,7 @@
           </div>
         </div>
         <div class="nav-item ms-auto"><a class="nav-link"
-            href="https://useoftools.com/">Online Tools</a></div>
+            href="https://tools.famral.com/">More Tools</a></div>
       </div>
     </div>
   </header>
@@ -389,7 +389,7 @@
           </li>
           <li><a href="html_encode.html">Encode</a></li>
           <li><a href="html_decode.html">Decode</a></li>
-          <li><a href="https://www.famral.com/tools/html-link-generator">Link Generator</a></li>
+          <li><a href="https://tools.famral.com/html-link-generator">Link Generator</a></li>
         </ul>
         <ul class="menu">
           <li>
