--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </li>
                 <li><a href="html_encode.html">Encode</a></li>
                 <li><a href="html_decode.html">Decode</a></li>
-                <li><a href="https://tools.famral.com/html-link-generator">Link Generator</a></li>
+                <li><a href="https://www.useoftools.com/html-link-generator">Link Generator</a></li>
               </ul>
               <ul class="menu">
                 <li>
@@ -227,7 +227,7 @@
           </div>
         </div>
         <div class="nav-item ms-auto"><a class="nav-link"
-            href="https://tools.famral.com/">More Tools</a></div>
+            href="https://www.useoftools.com/">More Tools</a></div>
       </div>
     </div>
   </header>
@@ -389,7 +389,7 @@
           </li>
           <li><a href="html_encode.html">Encode</a></li>
           <li><a href="html_decode.html">Decode</a></li>
-          <li><a href="https://tools.famral.com/html-link-generator">Link Generator</a></li>
+          <li><a href="https://www.useoftools.com/html-link-generator">Link Generator</a></li>
         </ul>
         <ul class="menu">
           <li>
@@ -415,7 +415,7 @@
     <div class="copyright"><form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_NcpPoZy0xv1FNw" async> </script> </form></div>
   </footer>
   <footer class="footer">
-    <div class="copyright">&copy; 2024 ScienceBaba Tools - Online Developer Tools</div>
+    <div class="copyright">&copy; 2025 www.UseOfTools.com - Online Developer Tools</div>
   </footer>
   <script src="https://code.jquery.com/jquery-1.10.1.min.js" defer></script>
   <script src="js/main.js?v=17" defer></script>
